@@ -26,8 +26,8 @@ import edu.colorado.phet.common.phetcommon.view.util.ColorUtils;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.nodes.HTMLNode;
 import edu.colorado.phet.common.piccolophet.simsharing.NonInteractiveEventHandler;
-import edu.colorado.phet.dilutions.DilutionsResources.Strings;
-import edu.colorado.phet.dilutions.DilutionsSimSharing.UserComponents;
+import edu.colorado.phet.dilutions.MolarityResources.Strings;
+import edu.colorado.phet.dilutions.MolaritySimSharing.UserComponents;
 import edu.umd.cs.piccolo.PCanvas;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PPath;
