@@ -1,3 +1,4 @@
+1/26/12 rename various Dilutions* classes to Molarity*
 1/26/12 delete code that is specific to "Dilutions" tab [60666]
 1/26/12 disable the concentration feature on the beaker label
 1/25/12 revert min color of KMnO4 to RGB=[255,0,255]
